apps/kube/irc/manifests/ergo-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: ergo-irc-service
    namespace: irc
    labels:
        app: ergo-irc
        kbve.com/category: application
        kbve.com/stack: core
        kbve.com/managed-by: argocd
spec:
    type: ClusterIP
    selector:
        app: ergo-irc
    ports:
        - name: irc
          port: 6667
          targetPort: 6667
          protocol: TCP
        - name: ircs
          port: 6697
          targetPort: 6697
          protocol: TCP
        - name: websocket
          port: 8080
          targetPort: 8080
          protocol: TCP
        - name: websocket-proxy
          port: 8067
          targetPort: 8067
          protocol: TCP
