apps/kube/irc/manifests/irc-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: irc-gateway-deployment
    namespace: irc
    labels:
        app: irc-gateway
        kbve.com/category: application
        kbve.com/stack: core
        kbve.com/managed-by: argocd
spec:
    replicas: 1
    selector:
        matchLabels:
            app: irc-gateway
    template:
        metadata:
            annotations:
                rollout-restart: '2026-06-14T15:27:33Z'
            labels:
                app: irc-gateway
                version: '0.1.32'
        spec:
            containers:
                - name: irc-gateway
                  image: ghcr.io/kbve/irc-gateway:0.1.32
                  imagePullPolicy: Always
                  ports:
                      - containerPort: 4321
                        protocol: TCP
                        name: http
                      - containerPort: 6667
                        protocol: TCP
                        name: irc
                  resources:
                      requests:
                          memory: 256Mi
                          cpu: 500m
                      limits:
                          memory: 512Mi
                          cpu: 1000m
---
apiVersion: v1
kind: Service
metadata:
    name: irc-gateway-service
    namespace: irc
    labels:
        app: irc-gateway
        kbve.com/category: application
        kbve.com/stack: core
        kbve.com/managed-by: argocd
spec:
    type: ClusterIP
    selector:
        app: irc-gateway
    ports:
        - port: 4321
          targetPort: 4321
          protocol: TCP
          name: http
        - port: 6667
          targetPort: 6667
          protocol: TCP
          name: irc
