apps/kube/irc/manifests/thelounge-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: thelounge-service
    namespace: irc
spec:
    type: ClusterIP
    selector:
        app: thelounge
    ports:
        - name: http
          port: 9000
          targetPort: 9000
          protocol: TCP
