apps/kube/irc/manifests/irc-domain-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: irc-domain-redirect
    namespace: irc
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-dns
        nginx.ingress.kubernetes.io/permanent-redirect: "https://chat.kbve.com$request_uri"
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - irc.kbve.com
          secretName: irc-domain-redirect-tls-secret
    rules:
        - host: irc.kbve.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: irc-gateway-service
                            port:
                                number: 4321
