apps/kube/irc/manifests/irc-redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: irc-redirect
    namespace: irc
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-http
        nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
        nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
        nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - irc.kbve.com
          secretName: irc-redirect-tls
    rules:
        - host: irc.kbve.com
          http:
              paths:
                  - path: /webirc
                    pathType: Prefix
                    backend:
                        service:
                            name: ergo-irc-service
                            port:
                                number: 8067
