apps/kube/irc/manifests/thelounge-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: thelounge-ingress
    namespace: irc
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-http
        nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - chat.kbve.com
          secretName: thelounge-tls
    rules:
        - host: chat.kbve.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: thelounge-service
                            port:
                                number: 9000
